more responsive UI

--- a/public/MarvelTracker.html
+++ b/public/MarvelTracker.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <script src="MarvelTracker.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>What MCU Movies Should I Watch?</title>
+    <title>Which MCU Movies Should I Watch?</title>
 </head>
 <body>
-<h1>What MCU Movies Should I Watch?</h1>
+<h1>Which MCU Movies Should I Watch?</h1>
 <div id="main">
     <div id="instructions">
         <h2>Step 1: Select the movies you've already seen</h2>
