--- a/public/MarvelTracker.html
+++ b/public/MarvelTracker.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Which MCU Movies Should I Watch?</h1>
+<p id="error"></p>
 <div id="main">
     <div id="instructions">
         <h2>Step 1: Select the movies you've already seen</h2>
