--- a/public/MarvelTracker.html
+++ b/public/MarvelTracker.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div id="recs" class="hidden"></div>
-            <button id="previous" disabled>Previous</button>
+            <button id="previous" disabled>Reset</button>
             <button id="next">Next</button>
         </div>
         <div id="movies"></div>
