root redirect + changed index page name

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Which MCU Movies Should I Watch?</h1>
     <h2>Frequently Asked Questions</h2>
-    <header><a href="MarvelTracker.html"><em>Return to Main Page</em></a></header>
+    <header><a href="index.html"><em>Return to Main Page</em></a></header>
     <h3>What is the Point of This App?</h3>
     <p>There are 23 movies and counting in the Marvel Cinematic Universe. You may have have seen a few of them, and
         there may be a few you want to see. (If you want to watch all 23 movies, this app is pointless for you!!)
