--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+Copyright 2020 William Locatelli.
+This is the main page for the Marvel Movie Wizard Helper App.
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
