typo, hover selected

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -58,7 +58,7 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         instead recommend you <em>Avengers: Age of Ultron</em>, <em>Ant-Man</em>, and <em>Captain America: Civil War</em>.
     </p>
     <h3>How does the code work?</h3>
-    <p>The set of films is modeled as a directed acyclic weighted graph, where each vertex represents a film. Connections
+    <p>The set of films is modeled as a weighted directed acyclic graph, where each vertex represents a film. Connections
         between the films are represented as edges between the vertices, with stronger connections having higher weights.
         The way the films are selected from this graph is dependent on which heuristic you choose.
     </p>
