--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,47 @@ This is the main page for the Marvel Movie Wizard Helper App.
             <button id="previous" disabled>Reset</button>
             <button id="next">Next</button>
         </div>
-        <div id="movies"></div>
+        <div id="movies">
+            <div>
+                <p id="iron-man">Iron Man</p>
+                <p id="iron-man-2">Iron Man 2</p>
+                <p id="iron-man-3">Iron Man 3</p>
+            </div>
+            <div>
+                <p id="thor">Thor</p>
+                <p id="thor:-the-dark-world">Thor: The Dark World</p>
+                <p id="thor:-ragnarok">Thor: Ragnarok</p>
+            </div>
+            <div>
+                <p id="captain-america:-the-first-avenger">Captain America: The First Avenger</p>
+                <p id="captain-america:-the-winter-soldier">Captain America: The Winter Soldier</p>
+                <p id="captain-america:-civil-war">Captain America: Civil War</p>
+            </div>
+            <div>
+                <p id="the-incredible-hulk">The Incredible Hulk</p>
+                <p id="guardians-of-the-galaxy">Guardians of the Galaxy</p>
+                <p id="guardians-of-the-galaxy-vol.-2">Guardians of the Galaxy Vol. 2</p>
+            </div>
+            <div>
+                <p id="the-avengers">The Avengers</p>
+                <p id="avengers:-age-of-ultron">Avengers: Age of Ultron</p>
+                <p id="avengers:-infinity-war">Avengers: Infinity War</p>
+                <p id="avengers:-endgame">Avengers: Endgame</p>
+            </div>
+            <div class="end">
+                <p id="ant-man">Ant-Man</p>
+                <p id="ant-man-and-the-wasp">Ant-Man and the Wasp</p>
+                <p id="doctor-strange">Doctor Strange</p>
+            </div>
+            <div class="end">
+                <p id="spider-man:-homecoming">Spider-Man: Homecoming</p>
+                <p id="spider-man:-far-from-home">Spider-Man: Far From Home</p>
+            </div>
+            <div class="end">
+                <p id="black-panther">Black Panther</p>
+                <p id="captain-marvel">Captain Marvel</p>
+            </div>
+        </div>
     </div>
     <footer>©2020 William Locatelli ◦ <a href="FAQ.html">FAQ</a></footer>
 </body>
