added Boostrap + Whatever It Takes

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -6,6 +6,7 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="faq.css">
     <title>Frequently Asked Questions</title>
