--- a/public/Weights.html
+++ b/public/Weights.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <!--
 Copyright 2020 William Locatelli.
-Describes the rules I used to determine edge weights.
+Describes the rules used to determine edge weights.
 -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="faq.css">
     <title>Rules For Deciding Edge Weights</title>
