--- a/public/index.html
+++ b/public/index.html
@@ -6,82 +6,96 @@ This is the main page for the Marvel Movie Wizard Helper App.
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="MarvelTracker.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Which MCU Movies Should I Watch?</title>
 </head>
 <body>
     <h1>Which MCU Movies Should I Watch?</h1>
     <p id="error" class="hidden"></p>
-    <div id="main">
-        <div id="instructions">
-            <h2>Step 1: Select the movies you've already seen</h2>
-            <div id="options" class="hidden">
-                <p>How many additional movies are you willing to watch?</p>
-                <input type="number" id="count" min=1 max=23 value=1><br>
-                <p>Heuristic for choosing films</p>
-                <div id="buttons">
-                    <div>
-                        <input type="radio" id="rel" name="heuristic" value="Relevant" checked>
-                        <label for="rel">Most Relevant</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="rec" name="heuristic" value="Recent">
-                        <label for="rec">Most Recent</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="inter" name="heuristic" value="Interconnected">
-                        <label for="inter">Most Interconnected</label>
-                        <p>Note: Most Interconnected can take up to 30 seconds if requesting 8 to 17 films</p>
+    <div class="container-fluid">
+        <div id="main" class="row">
+            <div id="instructions" class="col-sm-9 col-md-3">
+                <h2>Step 1: Select the movies you've already seen</h2>
+                <div id="options" class="hidden">
+                    <p>How many additional movies are you willing to watch?</p>
+                        <div>
+                            <input type="radio" id="select_num" name="count_rule" value="Count" checked>
+                            <label for="select_num"><input type="number" id="count" min=1 max=23 value=1><br></label>
+                        </div>
+                        <div>
+                            <input type="radio" id="whatever" name="count_rule" value="Whatever It Takes">
+                            <label for="whatever">Whatever It Takes</label>
+                        </div>
+                    <p>Heuristic for choosing films</p>
+                    <div id="buttons">
+                        <div>
+                            <input type="radio" id="rel" name="heuristic" value="Relevant" checked>
+                            <label for="rel">Most Relevant</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="rec" name="heuristic" value="Recent">
+                            <label for="rec">Most Recent</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="inter" name="heuristic" value="Interconnected">
+                            <label for="inter">Most Interconnected</label>
+                            <p>Note: Most Interconnected can take up to 30 seconds if requesting 8 to 17 films</p>
+                        </div>
                     </div>
                 </div>
+                <div id="recs" class="hidden"></div>
+                <button id="previous" disabled>Reset</button>
+                <button id="next">Next</button>
             </div>
-            <div id="recs" class="hidden"></div>
-            <button id="previous" disabled>Reset</button>
-            <button id="next">Next</button>
-        </div>
-        <div id="movies">
-            <div>
-                <p id="iron-man">Iron Man</p>
-                <p id="iron-man-2">Iron Man 2</p>
-                <p id="iron-man-3">Iron Man 3</p>
-            </div>
-            <div>
-                <p id="thor">Thor</p>
-                <p id="thor:-the-dark-world">Thor: The Dark World</p>
-                <p id="thor:-ragnarok">Thor: Ragnarok</p>
-            </div>
-            <div>
-                <p id="captain-america:-the-first-avenger">Captain America: The First Avenger</p>
-                <p id="captain-america:-the-winter-soldier">Captain America: The Winter Soldier</p>
-                <p id="captain-america:-civil-war">Captain America: Civil War</p>
-            </div>
-            <div>
-                <p id="the-incredible-hulk">The Incredible Hulk</p>
-                <p id="guardians-of-the-galaxy">Guardians of the Galaxy</p>
-                <p id="guardians-of-the-galaxy-vol.-2">Guardians of the Galaxy Vol. 2</p>
-            </div>
-            <div>
-                <p id="the-avengers">The Avengers</p>
-                <p id="avengers:-age-of-ultron">Avengers: Age of Ultron</p>
-                <p id="avengers:-infinity-war">Avengers: Infinity War</p>
-                <p id="avengers:-endgame">Avengers: Endgame</p>
-            </div>
-            <div class="end">
-                <p id="ant-man">Ant-Man</p>
-                <p id="ant-man-and-the-wasp">Ant-Man and the Wasp</p>
-                <p id="doctor-strange">Doctor Strange</p>
-            </div>
-            <div class="end">
-                <p id="spider-man:-homecoming">Spider-Man: Homecoming</p>
-                <p id="spider-man:-far-from-home">Spider-Man: Far From Home</p>
-            </div>
-            <div class="end">
-                <p id="black-panther">Black Panther</p>
-                <p id="captain-marvel">Captain Marvel</p>
+            <div id="movies" class="col-sm-12 col-md">
+                <div>
+                    <p id="iron-man">Iron Man</p>
+                    <p id="iron-man-2">Iron Man 2</p>
+                    <p id="iron-man-3">Iron Man 3</p>
+                </div>
+                <div>
+                    <p id="thor">Thor</p>
+                    <p id="thor:-the-dark-world">Thor: The Dark World</p>
+                    <p id="thor:-ragnarok">Thor: Ragnarok</p>
+                </div>
+                <div>
+                    <p id="captain-america:-the-first-avenger">Captain America: The First Avenger</p>
+                    <p id="captain-america:-the-winter-soldier">Captain America: The Winter Soldier</p>
+                    <p id="captain-america:-civil-war">Captain America: Civil War</p>
+                </div>
+                <div>
+                    <p id="the-incredible-hulk">The Incredible Hulk</p>
+                    <p id="guardians-of-the-galaxy">Guardians of the Galaxy</p>
+                    <p id="guardians-of-the-galaxy-vol.-2">Guardians of the Galaxy Vol. 2</p>
+                </div>
+                <div>
+                    <p id="the-avengers">The Avengers</p>
+                    <p id="avengers:-age-of-ultron">Avengers: Age of Ultron</p>
+                    <p id="avengers:-infinity-war">Avengers: Infinity War</p>
+                    <p id="avengers:-endgame">Avengers: Endgame</p>
+                </div>
+                <div class="end">
+                    <p id="ant-man">Ant-Man</p>
+                    <p id="ant-man-and-the-wasp">Ant-Man and the Wasp</p>
+                    <p id="doctor-strange">Doctor Strange</p>
+                </div>
+                <div class="end">
+                    <p id="spider-man:-homecoming">Spider-Man: Homecoming</p>
+                    <p id="spider-man:-far-from-home">Spider-Man: Far From Home</p>
+                </div>
+                <div class="end">
+                    <p id="black-panther">Black Panther</p>
+                    <p id="captain-marvel">Captain Marvel</p>
+                </div>
             </div>
         </div>
     </div>
     <footer>©2020 William Locatelli ◦ <a href="FAQ.html">FAQ</a></footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
