--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ This is the main page for the Marvel Movie Wizard Helper App.
                     <div>
                         <div>
                             <input type="radio" id="select_num" name="count_rule" value="Count" checked>
-                            <label for="select_num"><input type="number" id="count" min=1 max=23 value=1><br></label>
+                            <label for="select_num"><input type="number" id="count" min=1 max=23 value=3><br></label>
                         </div>
                         <div>
                             <input type="radio" id="whatever" name="count_rule" value="Whatever It Takes">
@@ -95,7 +95,8 @@ This is the main page for the Marvel Movie Wizard Helper App.
             </div>
         </div>
     </div>
-    <footer>©2020 William Locatelli ◦ <a href="FAQ.html">FAQ</a></footer>
+    <footer>©2020 <a href="http://williamlocatelli.com">William Locatelli</a> ◦ <a href="FAQ.html">FAQ</a>
+        ◦ <a href="https://github.com/WilliamLocatelli/mcu-expert">Github</a></footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
