--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <!--
 Copyright 2020 William Locatelli.
-This is the main page for the Marvel Movie Wizard Helper App.
+This is the main page for the Marvel Movie Wizard Helper App. The user selects the movies they have seen and the movies
+they want to see, specifies how many movies they want to be recommended, and what heuristic they want to be used to
+pick the movies.
 -->
 <html lang="en">
 <head>
@@ -13,7 +15,7 @@ This is the main page for the Marvel Movie Wizard Helper App.
     <title>Which MCU Movies Should I Watch?</title>
 </head>
 <body>
-    <h1>Which MCU Movies Should I Watch?</h1>
+    <h1>Which Marvel Movies Should I Watch?</h1>
     <p id="error" class="hidden"></p>
     <div class="container-fluid">
         <div id="main" class="row">
