--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -30,6 +30,9 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
     <p>The MCU is the Marvel Cinematic Universe, which is the setting of every film made by Marvel Studios, and
         the upcoming Disney+ shows made by Marvel Studios, and many now-cancelled television shows made by Marvel
         Television. For more on this, see <a href="http://en.Wikipedia.org/wiki/Marvel_Cinematic_Universe">Wikipedia</a>.</p>
+    <h4>Why are Marvel movies like the X-Men films, Fantastic Four, Deadpool, Venom, etc left out?</h4>
+    <p>Those movies contain Marvel characters, but they were not made by Marvel Studios, and they do not take place
+        in the Marvel Cinematic Universe.</p>
     <h4>Why should I trust you? This app is obviously very subjective and I'm probably a bigger MCU fan than you!</h4>
     <p>If you're a bigger MCU fan than me, you aren't the target audience for this app because you've already seen
         all of the movies many times. And if your friends want to know which movies they should watch, they'll just ask you,
