added line directing confused users to FAQ

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@ pick the movies.
                             <label for="inter">Most Interconnected</label>
                         </div>
                     </div>
-                    <p><em>Note: Most Interconnected can take up to 30 seconds.</em></p>
+                    <p><em>Most Interconnected can take up to 30 seconds.
+                    More information regarding these heuristics can be found in the <a href="FAQ.html">FAQ</a>.</em></p>
                 </div>
                 <div id="recs" class="hidden"></div>
                 <button id="previous" disabled>Reset</button>
