eliminated /index.html

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -14,7 +14,7 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
 <body>
     <h1>Which MCU Movies Should I Watch?</h1>
     <h2>Frequently Asked Questions</h2>
-    <header><a href="index.html"><em>Return to Main Page</em></a></header>
+    <header><a href="/"><em>Return to Main Page</em></a></header>
     <h3>General</h3>
     <h4>What is the point of this app?</h4>
     <p>There are 23 movies and counting in the Marvel Cinematic Universe. You may have have seen a few of them, and
