--- a/public/Weights.html
+++ b/public/Weights.html
@@ -14,7 +14,7 @@ Describes the rules used to determine edge weights.
 <body>
 <h1>Which MCU Movies Should I Watch?</h1>
     <header>
-        <a href="FAQ.html"><em>Return to FAQ</em></a> ◦ <a href="index.html"><em>Main Page</em></a>
+        <a href="FAQ.html"><em>Return to FAQ</em></a> ◦ <a href="/"><em>Main Page</em></a>
     </header>
 <h2>Edge Weight Rules</h2>
     <ul>
