--- a/public/index.html
+++ b/public/index.html
@@ -98,10 +98,12 @@ pick the movies.
             </div>
         </div>
     </div>
+    <div class="col-sm-12 col-md-7 hidden">
         <div class="youtube-inner-container">
             <iframe class="responsive-iframe" src="https://www.youtube.com/embed/ZVMB6pn661w" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+    </div>
     <footer>©2020 William Locatelli ◦ <a href="FAQ.html">FAQ</a> ◦ <a href="https://github.com/WilliamLocatelli/mcu-expert">Github</a>
         ◦ <a href="https://www.linkedin.com/in/william-locatelli/">LinkedIn</a>
     </footer>
