removed default heuristic to force choice

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@ pick the movies.
                     <h3>Heuristic for choosing films:</h3>
                     <div id="buttons">
                         <div>
-                            <input type="radio" id="rel" name="heuristic" value="Relevant" checked>
+                            <input type="radio" id="rel" name="heuristic" value="Relevant">
                             <label for="rel">Most Relevant</label>
                         </div>
                         <div>
