--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@ pick the movies.
         <div id="main" class="row">
             <div id="instructions" class="col-sm-9 col-md-3">
                 <h2>Step 1: Select the movies you've already seen</h2>
-                <h3 class="subheading">If you wouldn't mind watching the movie again, don't select it.</h3>
+                <h3 class="subheading">If you don't remember the movie and wouldn't mind watching it again, don't select it.</h3>
                 <div id="options" class="hidden">
                     <h3>How many additional movies are you willing to watch?</h3>
                     <div>
