--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@ pick the movies.
                     <div>
                         <div>
                             <input type="radio" id="select_num" name="count_rule" value="Count" checked>
-                            <label for="select_num"><input type="number" id="count" min=1 max=23 value=3><br></label>
+                            <label for="select_num"><input type="number" id="count" min=1 max=22 value=3><br></label>
                         </div>
+                        <input type="range" id="count-slider" min=1 max=22 value=3><br>
                         <div>
                             <input type="radio" id="whatever" name="count_rule" value="Whatever It Takes">
                             <label for="whatever">Whatever It Takes</label>
