hid Whatever It Takes

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@ pick the movies.
                     <h3>How many additional movies are you willing to watch?</h3>
                     <div>
                         <div>
-                            <input type="radio" id="select_num" name="count_rule" value="Count" checked>
+                            <input type="radio" id="select_num" name="count_rule" value="Count" class = "hidden" checked>
                             <label for="select_num"><input type="number" id="count" min=1 max=22 value=3><br></label>
                         </div>
                         <input type="range" id="count-slider" min=1 max=22 value=3><br>
-                        <div>
+                        <div class="hidden">
                             <input type="radio" id="whatever" name="count_rule" value="Whatever It Takes">
                             <label for="whatever">Whatever It Takes</label>
                         </div>
