changed "heuristic" to "algorithm" & removed WIT documentation

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -38,7 +38,7 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         all of the movies many times. And if your friends want to know which movies they should watch, they'll just ask you,
         so you don't need to worry about them getting bad info from this site! However, for the poor souls who aren't so
         lucky as to have you as a friend, this site will hopefully be more useful than having no resource at all.</p>
-    <h3>What Does Each Heuristic Do?</h3>
+    <h3>What Does Each Algorithm Do?</h3>
     <h4>Most Interconnected</h4>
     <p>Selecting the Most Interconnected option will get you a set of movies which have characters, plotlines, etc that
         are all highly interconnected with the movies you've seen, the movies you want to watch, and each other. Note:
@@ -61,10 +61,13 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         nothing in these movies is relevant to <em>Black Panther</em>, so the Most Recent option will skip those and
         instead recommend you <em>Avengers: Age of Ultron</em>, <em>Ant-Man</em>, and <em>Captain America: Civil War</em>.
     </p>
-    <h4>What does Whatever It Takes do?</h4>
-    <p>Whatever It Takes will give you the "default" movies for the heuristic you selected.</p>
+    <!--<h4>What does Whatever It Takes do?</h4>
+    <p>Whatever It Takes will give you the "default" movies for the algorithm you selected.</p>
     <p>If you selected Most Relevant, you will be recommended all the movies immediately relevant to your selected
         movies and nothing else.</p>
+
+    <p>When Most Interconnected or Most Recent is selected, Whatever It Takes is treated exactly the same as if you had
+        requested an unlimited number of movies, which means that both of these options will give the same results.</p>-->
     <!--<p>If you selected Most Recent, it will give you all the movies which your movies directly continue from, but no
         movies that those additional movies continue from. For example, if you request the most recent movies to
         <em>Avengers: Infinity War</em>, you will receive <em>Guardians Of The Galaxy Vol. 2</em>,
@@ -72,12 +75,10 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         <em>Captain America: Civil War</em>, as <em>Spider-Man: Homecoming</em> and <em>Black Panther</em> both
         continue stories from <em>Captain America: Civil War</em>. Another way of explaining this would be to say
         you get the most recent movies which could be watched in any order.</p>-->
-    <p>When Most Interconnected or Most Recent is selected, Whatever It Takes is treated exactly the same as if you had
-        requested an unlimited number of movies, which means that both of these options will give the same results.</p>
     <h3>How does the code work?</h3>
     <p>The set of films is modeled as a weighted directed acyclic graph, where each vertex represents a film. Connections
         between the films are represented as edges between the vertices, with stronger connections having higher weights.
-        The way the films are selected from this graph is dependent on which heuristic you choose.
+        The way the films are selected from this graph is dependent on which algorithm you choose.
     </p>
     <h4>How are the weights chosen?</h4>
     <p>The weights are based on a highly subjective scale, which is based on my highly subjective evaluation
