--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@ pick the movies.
                             <label for="whatever">Whatever It Takes</label>
                         </div>
                     </div>
-                    <h3>Heuristic for choosing films:</h3>
+                    <h3>Algorithm for choosing films:</h3>
                     <div id="buttons">
                         <div>
                             <input type="radio" id="rel" name="heuristic" value="Relevant" checked>
@@ -52,7 +52,7 @@ pick the movies.
                         </div>
                     </div>
                     <p class="subheading">Most Interconnected can take up to 30 seconds.
-                    More information regarding these heuristics can be found in the <a href="FAQ.html">FAQ</a>.</p>
+                    More information regarding these algorithms can be found in the <a href="FAQ.html">FAQ</a>.</p>
                 </div>
                 <div id="recs" class="hidden"></div>
                 <button id="previous" disabled>Reset</button>
