made faq less snarky

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -36,8 +36,8 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
     <h4>Why should I trust you? This app is obviously very subjective and I'm probably a bigger MCU fan than you!</h4>
     <p>If you're a bigger MCU fan than me, you aren't the target audience for this app because you've already seen
         all of the movies many times. And if your friends want to know which movies they should watch, they'll just ask you,
-        so you don't need to worry about them getting bad info from this site! However, for the poor souls who aren't so
-        lucky as to have you as a friend, this site will hopefully be more useful than having no resource at all.</p>
+        so you don't need to worry about them getting bad info from this site! However, for anyone who doesn't have you as
+        a friend, this site will hopefully be more useful than having no resource at all.</p>
     <h3>What Does Each Algorithm Do?</h3>
     <h4>Most Interconnected</h4>
     <p>Selecting the Most Interconnected option will get you a set of movies which have characters, plotlines, etc that
